# ktui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: kafka.rs  main.rs
