[package]
name = "ktui"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = "0.38"
crossterm = "0.29"
anyhow = "1.0"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
ratatui = "0.29.0"
clap = { version = "4.5.44", features = ["derive"] }
